tests/custom_discriminant/fail/type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/custom_discriminant/fail/type_mismatch.rs:5:11
  |
5 |     Bar = 0,
  |           ^ expected `()`, found integer

error[E0308]: mismatched types
 --> tests/custom_discriminant/fail/type_mismatch.rs:6:11
  |
6 |     Baz = 1,
  |           ^ expected `()`, found integer

error: could not evaluate constant pattern
 --> tests/custom_discriminant/fail/type_mismatch.rs:3:1
  |
3 | #[custom_discriminant(())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `custom_discriminant` (in Nightly builds, run with -Z macro-backtrace for more info)
